--- a/index.html
+++ b/index.html
@@ -23,5 +23,17 @@
         </header>
     </div>
 
+    <!-- content -->
+    <main>
+        <div class="section_wrap">
+            <section class="visual">
+                <video class="waves" autoplay muted loop playsinline>
+                    <source src="./assets/img/waves.mp4"/>
+                </video>
+                <h2 class="title">Crew a la mode</h2>
+            </section>
+        </div>
+    </main>
+
 </body>
 </html>
