Docs: "Feat 추가  about 섹션 영역 시맨틱 마크업"

--- a/index.html
+++ b/index.html
@@ -26,11 +26,22 @@
     <!-- content -->
     <main>
         <div class="section_wrap">
-            <section class="visual">
+            <section class="section--visual">
                 <video class="waves" autoplay muted loop playsinline>
                     <source src="./assets/img/waves.mp4"/>
                 </video>
                 <h2 class="title">Crew a la mode</h2>
+            </section>
+            <section class="section--about">
+                <div class="section-about-inner_wrap">
+                    <div class="text_wrap">
+                        <h2 class="title">about us</h2>
+                        <p>The apparel & lifestyle agency. <br>
+                            A decade of unrivalled experience. <br>
+                            Trusted by the worlds most luxurious yachts.</p>
+                            <a href="#">explore</a>
+                    </div>
+                </div>
             </section>
         </div>
     </main>
