Docs: "Feat 추가 approach 섹션 시맨틱 마크업"

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/main.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
+    <script src="./js/main.js" defer></script>
     <title>web page</title>
 </head>
 <body>
@@ -40,6 +42,26 @@
                             A decade of unrivalled experience. <br>
                             Trusted by the worlds most luxurious yachts.</p>
                             <a href="#">explore</a>
+                    </div>
+                </div>
+            </section>
+            <section class="section--approach">
+                <div class="section-approach-inner_wrap">
+                    <ul class="list">
+                        <li><a href=""><img src="./assets/img/approach_1.jpg" alt="" /></a></li>
+                        <li><a href=""><img src="./assets/img/approach_2.jpg" alt="" /></a></li>
+                        <li><a href=""><img src="./assets/img/approach_3.jpg" alt="" /></a></li>
+                        <li><a href=""><img src="./assets/img/approach_4.jpg" alt="" /></a></li>
+                    </ul>
+                    <div class="textwrap-fixed">
+                        <div class="text_wrap">
+                            <h2 class="title">about us</h2>
+                            <p>Considered essentials, limitless luxury we<br>
+                                establish the balance, approaching your<br>
+                                project in four ways, or a combination of<br>
+                                the following:</p>
+                                <a href="#">explore</a>
+                        </div>
                     </div>
                 </div>
             </section>
