Docs: "추가 sectors 섹션 시맨틱 마크업"

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <p>The apparel & lifestyle agency. <br>
                             A decade of unrivalled experience. <br>
                             Trusted by the worlds most luxurious yachts.</p>
-                            <a href="#">explore</a>
+                            <a href="#" role="button">explore</a>
                     </div>
                 </div>
             </section>
@@ -60,10 +60,37 @@
                                 establish the balance, approaching your<br>
                                 project in four ways, or a combination of<br>
                                 the following:</p>
-                                <a href="#">explore</a>
+                                <a href="#" role="button">explore</a>
                         </div>
                     </div>
                 </div>
+            </section>
+            <section class="section--sectors">
+                <div class="section--sectors-inner_wrap">
+                    <div class="text_wrap">
+                        <h2 class="title">sectors</h2>
+                        <p>Luxury crew apparel curated across oceans,<br>
+                            in private residences and at altitude.</p>
+                        <a href="" role="button">explore</a>
+                    </div>
+                    <ul class="list">
+                        <li>
+                        <a href="#"><img src="./assets/img/sectors_1.jpg" alt="" />
+                            <h3>yachting</h3>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./assets/img/sectors_2.jpg" alt="" />
+                            <h3>aviation</h3>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./assets/img/sectors_3.jpg" alt="" />
+                            <h3>residence</h3>
+                        </a>
+                    </li>
+                </ul>
+            </div>
             </section>
         </div>
     </main>
