Docs: "추가 service 섹션 시맨틱 마크업"

--- a/index.html
+++ b/index.html
@@ -92,6 +92,22 @@
                 </ul>
             </div>
             </section>
+            <section class="section--service">
+                <div class="section--service-inner_wrap">
+                    <div class="image_wrap">
+                        <img src="./assets/img/service.jpg" alt="" />
+                    </div>
+                    <dis class="text_wrap">
+                        <h2 class="title">services</h2>
+                        <p>Crew à la Mode specialise in all<br>
+                            your needs, from to storage<br>
+                            solutions to graphic design,<br>
+                            brand sourcing, customisation<br>
+                            and much more.</p>
+                            <a href="#" role="button">explore</a>
+                    </dis>
+                </div>
+            </section>
         </div>
     </main>
 
