--- a/index.html
+++ b/index.html
@@ -108,6 +108,47 @@
                     </dis>
                 </div>
             </section>
+            <section class="section--journal">
+                <div class="section--journal-inner_wrap">
+                    <h2>journal</h2>
+                    <ul class="list">
+                        <li><a href="#">
+                            <p class="image_wrap"><img src="./assets/img/journal_1.jpg" alt="" /></p>
+                            <h3>cocktails</h3>
+                            <p>New Year’s Eve is all about
+                            celebrating in style.With
+                            that in mind, we asked
+                            Daniel Hooper, Co-Founder of YesMore drinks-marketing agency (and former superyacht crew member) to share with us his recommendations.</p>
+                            </a>
+                        </li>
+                        <li><a href="#">
+                            <p class="image_wrap"><img src="./assets/img/journal_2.jpg" alt="" /></p>
+                            <h3>eco coffee</h3>
+                            <p>Some small brands that are
+                                worth the switch to enjoy a
+                                cup of coffee that little bit more.
+                                For many of us, the need for a quick fix coffee in our busy day-to-day lives sees the use of coffee capsules at home, onboard or in the workplace as a much-used product. Convenient as they are, only a small percentage can actually be recycled, meaning a vast majority will end up in our oceans and landfills for up to 500 yrs.</p>
+                            </a>
+                        </li>
+                        <li><a href="#">
+                            <p class="image_wrap"><img src="./assets/img/journal_3.jpg" alt="" /></p>
+                            <h3>arboretum</h3>
+                            <p>London is seeing a new
+                                genre of private independent member’s
+                                clubs emerging, offering luxurious leisure and dining facilities, alongside unique working environment and, most importantly an emphasis on environmental and social change.</p>
+                            </a>
+                        </li>
+                        <li><a href="#">
+                            <p class="image_wrap"><img src="./assets/img/journal_4.jpg" alt="" /></p>
+                            <h3>protected species</h3>
+                            <p>Iconic British design with
+                                contemporary rainwear technology
+                                At Crew à la Mode, we are passionate about sustainability, timeless style and performance-led design and we are always looking for brands who share our ethos and goals, in order to either work with them or recommend them to our clients.</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </div>
     </main>
 
