Docs: "추가 footer 영역 시맨틱 마크업"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <title>web page</title>
 </head>
 <body>
-    <div class="header_wrap" role="application">
+    <!-- header -->
+    <div class="header_wrap" role="application"> 
         <header>
             <nav>
                 <div class="nav-inner_wrap">
@@ -24,7 +25,6 @@
             </nav>
         </header>
     </div>
-
     <!-- content -->
     <main>
         <div class="section_wrap">
@@ -151,6 +151,22 @@
             </section>
         </div>
     </main>
-
+    <!-- footer -->
+    <footer class="footer">
+        <div class="footer--inner_wrap">
+            <h1 class="footer-logo" role="banner">à</h1>
+            <address>
+                <div class="address_wrap">
+                    <span>Carrer del Jardi Botànic 4, Palma De Mallorca, 07012</span>
+                    <span>+34 123 456 789 | abcd.com</span>
+                </div>
+            </address>
+            <ul class="sns-list">
+                <li><a href="#">instagram</a></li>
+                <li><a href="#">facebook</a></li>
+                <li><a href="#">linkedin</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
