Docs: "추가 approach 섹션 이미지 텍스트"
- 마우스 hover 효과를 위한 이미지 텍스트 삽입

--- a/index.html
+++ b/index.html
@@ -48,10 +48,22 @@
             <section class="section--approach">
                 <div class="section-approach-inner_wrap">
                     <ul class="list">
-                        <li><a href=""><img src="./assets/img/approach_1.jpg" alt="" /></a></li>
-                        <li><a href=""><img src="./assets/img/approach_2.jpg" alt="" /></a></li>
-                        <li><a href=""><img src="./assets/img/approach_3.jpg" alt="" /></a></li>
-                        <li><a href=""><img src="./assets/img/approach_4.jpg" alt="" /></a></li>
+                        <li><a href=""><img src="./assets/img/approach_1.jpg" alt="" />
+                            <span><b>CREW</b> Made</span>
+                            </a>
+                        </li>
+                        <li><a href=""><img src="./assets/img/approach_2.jpg" alt="" />
+                            <span><b>CREW</b> Ready</span>
+                            </a>
+                        </li>
+                        <li><a href=""><img src="./assets/img/approach_3.jpg" alt="" />
+                            <span><b>CREW</b> Design</span>
+                            </a>
+                        </li>
+                        <li><a href=""><img src="./assets/img/approach_4.jpg" alt="" />
+                            <span><b>CREW</b> Source</span>
+                            </a>
+                        </li>
                     </ul>
                     <div class="textwrap-fixed">
                         <div class="text_wrap">
