--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/main.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
+    <script src="./js/jquery-3.6.0.js" defer></script>
     <script src="./js/main.js" defer></script>
     <title>web page</title>
 </head>
