--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <!-- header -->
     <header>
             <div class="header_wrap" role="application"> 
-            <nav>
-                <div class="nav-inner_wrap">
+                <div class="header-inner_wrap">
                     <a href="" class="gnb-button" role="menubar">
                         <span class="a" role="menuitem"></span>
                         <span class="b" role="menuitem"></span>
@@ -25,8 +24,15 @@
                     <a href="" class="logo">Crew a la mode</a>
                     <a href="" class="contact">contact</a>
                 </div>
-            </nav>
-        </div>
+                <nav class="nav">
+                <ul class="gnb-menu" role="menubar">
+                    <li><a href="" role="menuitem">CREW <span>Made</span></a></li>
+                    <li><a href="" role="menuitem">CREW <span>Ready</span></a></li>
+                    <li><a href="" role="menuitem">CREW <span>Design</span></a></li>
+                    <li><a href="" role="menuitem">CREW <span>Source</span></a></li>
+                </ul>
+                </nav>
+            </div>
         </header>
     <!-- content -->
     <main>
