--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=0,maximum-scale=1.0;" />
     <link rel="stylesheet" href="./style/main.css" />
     <script src="./js/library/jquery-3.6.0.js" defer></script>
     <script src="./js/library/jquery.scrolla.min.js" defer></script>
