Chore: "추가 netlify"
- 배포를 위한 netlify 설치 및 설정

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="./js/library/splitting.min.js" defer></script>
     <script src="./js/main.js" defer></script>
     <script src="./js/animation.js" defer></script>
-    <title>web page</title>
+    <title>CREW A LA MODE</title>
 </head>
 <body>
     <!-- header -->
