Docs: "수정 a 요소 title 속성 추가"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=0,maximum-scale=1.0;" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/reset.css" />
     <link rel="stylesheet" href="./style/style.css" />
     <link rel="stylesheet" href="./style/index.css" />
@@ -20,18 +20,18 @@
     <!-- header -->
     <div class="header_wrap"> 
                 <header class="header">
-                    <a class="gnb_button" role="menu">
+                    <a class="gnb_button" role="button" title="button">
                         <span class="a"></span>
                         <span class="b"></span>
                     </a>
-                    <a href="" class="logo">Crew a la mode</a>
-                    <a href="" class="contact">contact</a>
+                    <a href="" class="logo" title="logo">Crew a la mode</a>
+                    <a href="" class="contact" title="contact">contact</a>
                 <nav class="nav">
                 <ul class="gnb_menu" role="menu" aria-expanded="false">
-                    <li><a href="" role="menuitem">CREW <span>Made</span></a></li>
-                    <li><a href="" role="menuitem">CREW <span>Ready</span></a></li>
-                    <li><a href="" role="menuitem">CREW <span>Design</span></a></li>
-                    <li><a href="" role="menuitem">CREW <span>Source</span></a></li>
+                    <li><a href="#" role="menuitem" title="Made">CREW <span>Made</span></a></li>
+                    <li><a href="#" role="menuitem" title="Ready">CREW <span>Ready</span></a></li>
+                    <li><a href="#" role="menuitem" title="Design">CREW <span>Design</span></a></li>
+                    <li><a href="#" role="menuitem" title="Source">CREW <span>Source</span></a></li>
                 </ul>
                 </nav>
         </header>
@@ -43,7 +43,7 @@
                 <video class="waves" autoplay muted loop playsinline>
                     <source src="./assets/img/waves.mp4"/>
                 </video>
-                <h1 class="title animate" data-animate="motion" data-splitting>Crew a la mode</h1>
+                <h2 class="title animate" data-animate="motion" data-splitting>Crew a la mode</h2>
             </section>
             <section class="section_about">
                 <div class="section_about_inner_wrap">
@@ -52,7 +52,7 @@
                         <p>The apparel & lifestyle agency. <br>
                             A decade of unrivalled experience. <br>
                             Trusted by the worlds most luxurious yachts.</p>
-                        <a href="#" role="button">explore</a>
+                        <a href="#" title="explore">explore</a>
                     </div>
                 </div>
             </section>
@@ -76,7 +76,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="textwrap_fixed">
+                    <div class="about_text">
                         <div class="text_wrap animate" data-animate="motion" data-splitting>
                             <h2 class="title">about us</h2>
                             <p>Considered essentials, limitless luxury we<br>
