--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
   <main>
     <div class="section_wrap">
       <section class="section_visual">
-        <video class="waves" autoplay muted loop playsinline>
+        <!-- <video class="waves" autoplay muted loop playsinline> -->
           <!-- <source src="./assets/img/waves.mp4" /> -->
-        </video>
+        <!-- </video> -->
         <h2 class="title animate" data-animate="motion" data-splitting>Crew a la mode</h2>
       </section>
       <section class="section_about">
